feat: read json file